# chocolatier-rewrite

./: .gitignore  Cargo.toml
chocolat/skeleton/: core.rs  foundation.rs  lib.rs
chocolatier_objc_parser/: Cargo.toml
src/: common.rs  crate_read.rs  gen.rs  main.rs  parse.rs  read.rs  skel.rs  write.rs
