[package]
name = "chocolatier"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2018"

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
thiserror = "1.0"
chocolatier_objc_parser = { path = "chocolatier_objc_parser" }

[workspace]
members = [
    "chocolatier_objc_parser",
]
