[package]
name = "chocolatier_objc_parser"
version = "0.1.0"
authors = ["Vincent Isambart <vincent.isambart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang-sys = { version = "1.1", features = ["runtime", "clang_8_0"] }
once_cell = "1.7"
regex = "1.4"
tempfile = "3.2"
bitflags = "1.2"
libc = "0.2"

[dev-dependencies]
structopt = "0.3"
